--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 <body>
     <h1>Home Page</h1>
-    <a href="/login">Login</a>
-    <a href="/signup">Sign Up</a>
+    <a href="/quote">Quote</a>
+
+    <a href="/new">New</a>
 </body>
 </html>
 
